src/components/all.sass
@import "~bulma/sass/utilities/initial-variables"

// Config vars
// Kaldi logo brand color: #FD461E
$kaldi-red: #000
$kaldi-red-invert: #fff

$primary: $kaldi-red
$primary-invert: $kaldi-red-invert
$body-color: #fff
$background-color: #111;
$black: #111

html {
  white-space: pre-wrap;
}

.footer
  border-top: 1px solid white;

.navbar .navbar-menu
  box-shadow:none !important

.content .taglist
  list-style: none
  margin-bottom: 0
  margin-left: 0
  margin-right: 1.5rem
  margin-top: 1.5rem
  display: flex
  flex-wrap: wrap
  justify-content: left
  align-items: center
  li
    padding: 0 2rem 1rem 0
    margin-bottom: 1.5rem
    margin-top: 0

// Helper Classes
.full-width-image-container
  width: 100vw
  height: 400px
  position: relative
  left: 50%
  right: 50%
  margin: 2em -50vw
  background-size: cover
  background-position: bottom
  display: flex
  justify-content: center
  align-items: center

.full-width-image
    width: 100vw
    height: 400px
    background-size: cover
    background-position: bottom
    display: flex
    justify-content: center
    align-items: center

.btn
    display: inline-block
    padding: 12px 16px 10px
    font-size: 18px
    font-size: 1rem
    line-height: 1.25
    background-color: #fff
    border-radius: .25rem
    text-decoration: none
    font-weight: 700
    color: #CC3700
    text-align: center
    -webkit-box-shadow: inset 0 0 0 2px #CC3700
    box-shadow: inset 0 0 0 2px #f40
    -webkit-transition: all .15s ease
    transition: all .15s ease

.margin-top-0
  margin-top: 0 !important

.navbar-item .icon
  color: $primary
// Override for use of svg's from https://simpleicons.org/
.icon svg
  width: 1.5rem
  height: 1.5rem
  fill: currentColor
.navbar-brand .navbar-item.logo
  padding: 0 1rem
footer.footer
  padding: 3rem 0rem 0rem
  background-color: transparent

//Menu overrides
$menu-item-color: $white-ter
$menu-item-hover-color: $black !important
$menu-item-hover-background-color: $black
$menu-item-active-color: $kaldi-red-invert
$menu-item-active-background-color:	$kaldi-red-invert
$menu-list-border-left: 1px solid $kaldi-red-invert
$menu-label-color: $white-ter


.menu-label
  font-size: 1em !important
  text-align: left
.menu-list
  list-style: none !important
  text-align: left
.social
  padding: 2em
.social a
    padding: .5em .5em .3em .5em
    border-radius: 1em
    background-color: $white-ter
    margin: .5em
    width: 1em
    height: 1em
    vertical-align: middle
    display: inline
  
// blog roll
.blog-list-item.is-featured
  background-color: #d6400033;
.blog-list-item header
  display: flex;
  margin-bottom: 1em;
.blog-list-item .featured-thumbnail
  flex-basis: 35%;
  margin: 0 1.5em 0 0;


@import "~bulma"


// responsiveness
+tablet-only
  .blog-list-item .featured-thumbnail
    flex-basis: 50%;

+mobile
  .blog-list-item header
    display: block
  .blog-list-item .featured-thumbnail
    text-align: center;
    max-width: 70%;
    margin: 0 0 1em;

html, body, p, ul, li, legend, textarea, h1, h2, h3, h4, .content h1, .content h2, .content h3, .content h4, .navbar, .navbar-item, .label
  color: $body-color;
  background-color: $background-color;

.header-with-background 
  background-color: $background-color;

.contact
  margin-top: 4rem;
  padding-left: .8rem;
  padding-right: .8rem;


// Description section on Distro Page
.distroDescription
  max-width: 55rem;
  margin: 0 auto;
  border-bottom: 1px solid white
  padding-left: .8rem;
  padding-right: .8rem;

.distroDescription__topText
  margin-bottom: .6rem;

.distroLabels
  max-width: 55rem;
  margin: 4rem auto;
  padding-left: .8rem;
  padding-right: .8rem;

.distro__item
  margin-bottom: 2rem;

.distro__itemMeta
  font-style: italic;

.distro__itemTitle
  color: #ccc;
  transition: .4s all;
  font-weight: bold;
  font-size: 18px;
  border-bottom: 1px solid #ccc;
  margin-left: .2rem;

.distro__itemTitle:hover
  color: white;

.distro__itemPrice

.distro__itemDescription
  color: #AA0000;
  font-style: italic;

.index__title 
  text-align: center;
  font-size: 36px;
  margin-top: 4rem;

.top-image
  display: block;
  max-height: 28vh;
  margin: 0 auto;
  padding-top: 4rem;

.index__content
  max-width: 55rem;
  margin: 0 auto;

a
  color: #ccc;
  transition: .4s all;
  font-weight: bold;
  font-size: 18px;
  border-bottom: 1px solid #ccc;
  margin-left: .2rem;

a:hover
  color: white;

.navbar
  position: fixed !important;
  width: 100%;
  border-bottom: 1px solid white;

.navbar-item
  font-size: 16px;
  border: none;

a.navbar-item:hover
  color: #333;

// Blog preview posts
.blog-list-item
  border: 1px solid white;
  background-color: #222;

.has-text-primary
  color: white !important;

a.has-text-primary:hover
  color: white !important;

.blogPost__excerpt
  background-color: #222;

.post-meta
  background-color: #222;

.blog-list-item.is-featured
  background-color: #222;

.btn
  color: #aa0000;
  border-color: #aa0000;
  box-shadow: inset 0 0 0 2px #aa0000;
  transition: all .4s;

.btn:hover
  color: #aa0000;
  transform: translateY(-2px);

.container.content
  margin-top: 2rem;

.section
  padding: 0;

.contact__heading
  padding-top: 5rem;

.contact__form
  padding-left: .8rem;
  padding-right: .8rem;
  margin-bottom: 2rem;

.content
  padding-left: .8rem;
  padding-right: .8rem;
  margin-bottom: 2rem;

.content ul
  margin-left: 0;

.about__content
  margin-top: 1rem;

.columns
  margin: 0;

.copyright
  text-align: right;
  font-size: 8px;
  
.thankyoupage
  min-height: 40rem;

.thankYou__text
  padding-top: 4rem;

